[package]
name = "corona-assembler"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"clap" = "*"
goblin = { version = "0.2", default_features = false, features = ['elf32', 'elf64', 'endian_fd'] }
