[package]
name = "riscy-cosimulator"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"riscy-emulator" = { path = "../emulator" }
"riscy-isa" = { path = "../isa" }
clap = "2.33"
goblin = { version = "0.2", default_features = false, features = ['elf32', 'elf64', 'endian_fd'] }
pretty_env_logger = "0.4.0"
log = "0.4.8"
crossbeam-channel = "0.4"