[package]
name = "riscy-isa"
description = "Encodes and decodes streams of RISC-V instructions."
license = "MIT"
repository = "https://github.com/michaelmelanson/riscy"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"
keywords = ["risc-v", "riscv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"byteorder" = "1.4"