[package]
name = "riscv-emulator"
version = "0.1.0"
authors = ["Michael Melanson <michael@michaelmelanson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"riscv-isa" = { path = "../riscv_isa" }
clap = "2.33"
goblin = { version = "0.2", default_features = false, features = ['elf32', 'elf64', 'endian_fd'] }
log = "0.4.8"
memmap = "0.7"
pretty_env_logger = "0.4.0"

[dev-dependencies]
simple_logger = "*"
paste = "0.1"